--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,6 +3,7 @@ encoding/LOGO_rc.py=utf-8
 encoding/TianD_convert2movDelegate.py=utf-8
 encoding/TianD_convert2movModel.py=utf-8
 encoding/TianD_convert2movWidget.py=utf-8
+encoding/TianD_loadingUI.py=utf-8
 encoding/__init__.py=utf-8
 encoding/convert2movUI.py=utf-8
 encoding/pyinstaller.py=utf-8
