--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//backup/showUI.py=utf-8
 encoding/DirectoryMatch.py=utf-8
 encoding/LOGO_rc.py=utf-8
 encoding/TianD_convert2movDelegate.py=utf-8
